hphp/test/slow/strict_mode/2203.php.expectf
HipHop Fatal error: syntax error, unexpected T_STRICT_ERROR, expecting $end in %s/hphp/test/slow/strict_mode/2203.php on line 1
